v1.2.4 - Pending
	+ Use case insensitive sorting for library (holy_robot)
	+ Ignore "the" when sorting library in artist/album views (holy_robot)
	+ Better logic when sorting playlists and "dir+file" option (sed)
	+ Allow saving/overwriting an existing playlist
	+ Update license to GNU GPLv3
	+ Bug: Fix nl.po translation causing crash
	+ Bug: Remember playlist position when adding from library
	+ Bug: MPD_HOST with password doesn't work on first install
	+ Bug: Fix desktop file to match current XDG standard (nigel)

v1.2.3 - August 23, 2007
	+ Incorporate disc tag in album sorting (Emmanuel Viaud)
	+ Significantly reduced wakeups/sec according to powertop
	+ Add stream name as a formatting option
	+ Added Italian translation (Gianni Vialetto)
	+ Added Swedish translation (Daniel Nylander)
	+ Added Dutch translation (Olivier)
	+ Bug: Stupid parsing of amazon URLs, reduced success of cover art fetching
	+ Bug: Default cover remains after refetching when not using ~/.covers
	+ Bug: Czech translation incorrectly labeled Swedish
	+ Bug: Song played after a replace is first in list, even in shuffle mode
	+ Bug: Collapsed view doesn't work properly in some WMs (e.g. Fluxbox)
	+ Bug: Display 'update library' menu item even when library is empty

v1.2.2 - July 22, 2007
	+ Bug: Fix artwork fetching (Amazon gzip'ed xml returns garbage)
	+ Bug: Prevent connection error if the interface hasn't yet been run
	+ Bug: Prevent possibility of deleting image file when choosing local art file
	+ Bug: Don't load gnome-settings-daemon if it's not running (kinote)

v1.2.1 - July 16, 2007
	+ Bug: Using MPD with a password causes error

v1.2 - July 15, 2007
	+ Audioscrobbler support (requires python 2.5 or python-elementtree) (Owen)
	+ Support for multiple profiles (and, e.g., "sonata --profile=2")
	+ Ability to set search terms for lyrics
	+ Ability to rename playlists (requires mpd >= 0.13)
	+ Prevent continually searching for artwork/lyrics if not found the first time